--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,15 @@
 
 project_url=
 api_key=
-
-PORT=3003
-
+PORT=
 DB_HOST=
 DB_PORT=
 DB_USERNAME=
 DB_PASSWORD=
 DB_NAME=
+# SMTP Configuration
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM=
