--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,11 @@ DB_PORT=
 DB_USERNAME=
 DB_PASSWORD=
 DB_NAME=
+
+# SSH Key Encryption (for system SSH key management)
+# Must be at least 32 characters long
+SSH_KEY_ENCRYPTION_SECRET=
+
 # SMTP Configuration
 SMTP_HOST=
 SMTP_PORT=
