--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "nodemailer": "^7.0.6",
+    "oci-sdk": "^2.122.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
