--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
     "typeorm": "^0.3.26",
+    "ua-parser-js": "^2.0.8",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
