--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
+    "ssh2": "^1.17.0",
     "typeorm": "^0.3.26",
     "ua-parser-js": "^2.0.8",
     "xml2js": "^0.6.2"
@@ -65,6 +66,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
+    "@types/ssh2": "^1.15.5",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
