--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nodemailer": "^7.0.6",
     "oci-sdk": "^2.122.2",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
@@ -66,6 +67,7 @@
     "@types/geoip-lite": "^1.4.4",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
+    "@types/passport-google-oauth20": "^2.0.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/ssh2": "^1.15.5",
     "@types/supertest": "^6.0.2",
